Show all products

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -46,6 +46,10 @@ table td, td {
   cursor: pointer;
 }
 
+.no-distribution {
+  text-align: center;
+}
+
 .distribution-text {
   text-decoration: underline;
 }
